--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,26 @@
+/* Grid Layout and Flexbox */
+.page-grid,
+.content-grid {
+  display: grid;
+}
+.page-grid {
+  grid-template-rows: 100px 70px;
+}
+.flex {
+  display: flex;
+}
+
 /* Main Styles */
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
 main {
   color: #595959;
 }
-main > div {
-  padding-bottom: 1em;
+.main-heading span {
+  font-weight: bold;
 }
 main > div,
-.web-traffic-div h3,
 .member ~ .member {
   border-top: 1px solid #595959;
 }
@@ -18,6 +32,26 @@ h3 {
 .searchbar,
 .stats-box {
   background-color: #ededed;
+}
+.notification-bell {
+  height: 20px;
+  width: 20px;
+}
+.profile-img {
+  height: 30px;
+  width: 30px;
+}
+img[src*="member-"] {
+  height: 64px;
+  width: 64px;
+}
+.svg-container,
+img[src*="member-"],
+.profile-img {
+  border-radius: 50%;
+}
+nav {
+  background-color: #5736b3;
 }
 header,
 .svg-container,
@@ -34,6 +68,11 @@ input[type="submit"] {
   padding-top: 1em;
   padding-bottom: 1em;
 }
+input[type="search"] {
+  border-width: 1px;
+  padding-top: .5em;
+  padding-bottom: .5em;
+}
 input,
 select,
 .stats-box {
@@ -49,65 +88,55 @@ select,
   font-size: 40px;
 }
 
-/* Grid Layout */
-.grid {
-  display: grid;
-  grid-template-rows: 70px 70px;
+/* Content Positioning */
+header,
+form,
+.secondary-heading,
+.new-members,
+.recent-activities,
+.message-user,
+.settings, 
+.settings-submit-buttons {
+  flex-direction: column;
 }
-
-/* Flexbox and Flex-items */
-.flex {
-  display: flex;
+header {
+  justify-content: space-around;
+}
+main > div {
+  padding-bottom: 1em;
+}
+.searchbar {
+  margin-bottom: 1em;
 }
 .searchbar input {
   margin: 1em auto;
   padding: .5em;
 }
+.main-heading,
+.user-heading {
+  margin: auto;
+}
 .main-heading {
-  margin-left: .5em;
   font-weight: lighter;
   font-size: 1.5em;
 }
-.main-heading span {
-  font-weight: bold;
+.user-heading {
+  justify-content: space-between;
 }
 .notification-bell, 
-.profile-img {
-  margin-right: 1em;
-}
-.notification-bell {
-  height: 20px;
-  width: 20px;
-  margin-left: auto;
-}
-.profile-img {
-  height: 30px;
-  width: 30px;
-}
+.profile-img, 
 .username {
-  margin-right: .5em;
-}
-.main-heading, 
-.username, 
-.notification-bell,
-.profile-img {
   margin-top: auto;
   margin-bottom: auto;
+  margin-left: 1em;
 }
-nav {
-  background-color: #5736b3;
-  justify-content: space-around;
+.nav-icons {
+  margin-top: 1.4em;
 }
-nav img {
+.nav-icons img {
   height: 1.5em;
   width: 1.5em;
   margin: auto;
-}
-.searchbar {
-  margin-bottom: 2em;
-}
-.web-traffic-div h3 {
-  padding-top: 1em;
 }
 .svg-container {
   width: 80px;
@@ -115,11 +144,6 @@ nav img {
 }
 .svg-container svg {
   margin: 1em;
-}
-.svg-container,
-img[src*="member-"],
-.profile-img {
-  border-radius: 50%;
 }
 .stats-box {
   padding: 1em;
@@ -133,33 +157,30 @@ img[src*="member-"],
   margin-bottom: 0;
   margin-top: auto;
 }
-form,
-.new-members,
-.recent-activities,
-.message-user,
-.settings, 
-.settings-submit-buttons {
-  flex-direction: column;
-  margin: 0 1em;
-}
 .member {
   display: block;
   text-align: center;
+  padding-bottom: 1em;
 }
 .new-members .member p {
   margin-bottom: 0;
 }
-.new-members .member {
-  margin-top: 1em;
-  padding-bottom: 1em;
-}
 .member ~ .member {
   padding-top: 1.5em;
+  margin-top: 1em;
+}
+.message-user,
+.settings {
+  padding-left: 1em;
+  padding-right: 1em;
 }
 .message-user input,
 .settings input {
   margin-top: 1em;
   margin-bottom: 1em;
+}
+.settings form > div {
+  justify-content: space-between;
 }
 .settings select {
   margin: 1em 0;
@@ -169,69 +190,54 @@ form,
 }
 
 /* Toggle Switch */
-
-/* The switch - the box around the slider */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
+.toggle { 
+  position : relative ; 
+  display : inline-block; 
+  width : 120px; 
+  height : 45px; 
+  background-color: #7146e8; 
+  border-radius: 30px; 
+  border: 2px solid #595959; 
+} 
+      
+/* After slide changes */
+.toggle:after { 
+  content: ''; 
+  position: absolute; 
+  width: 40px; 
+  height: 40px; 
+  border-radius: 50%; 
+  background-color: #fff; 
+  border: 1px solid #595959;
+  top: 1px;  
+  left: 1px; 
+  transition: all 0.5s; 
+} 
+      
+/* Toggle text */
+.toggle-text {
+  color: #fff;
+  font-weight: bold;
+  justify-content: space-between;
 }
-
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
+.toggle-text span {
+  margin: 15px 7px;
 }
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-input:checked + .slider {
-  background-color: #7146e8;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #7146e8;
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}
+      
+/* Checkbox cheked effect */
+.checkbox:checked + .toggle::after { 
+  left : 77px;  
+} 
+      
+/* Checkbox cheked toggle label bg color */
+.checkbox:checked + .toggle { 
+  background-color: #7146e8; 
+} 
+      
+/* Checkbox vanished */
+.checkbox {  
+  display : none; 
+} 
 
 /* Media Queries */
 @media (min-width: 768px) {
@@ -239,7 +245,161 @@ input:checked + .slider:before {
     border-right: black 1px solid;
     padding-right: 1em;
   }
- }
+  header {
+    flex-direction: row;
+  }
+  .user-heading {
+    margin-right: 1.5em;
+  }
+  .main-heading{
+    margin-left: 1.5em;
+  }
+  .secondary-heading {
+    flex-direction: row;
+    margin-bottom: 1em;
+  }
+  .secondary-heading h2 {
+    flex-basis: 25%;
+  }
+  .searchbar {
+    flex-basis: 75%;
+    border-left: 1px solid #595959;
+    border-bottom: 1px solid #595959;
+  }
+  .searchbar input {
+    margin-right: 4em;
+    width: 300px;
+  }
+  .page-grid {
+    grid-template-rows: 70px 70px;
+  }
+  .content-grid {
+    grid-template-areas: 
+      "s-heading s-heading"
+      "web-traffic web-traffic"
+      "daily-traffic mobile-user"
+      "social-stats social-stats"
+      "new-members new-members"
+      "recent recent"
+      "message-user message-user"
+      "settings settings";
+  }
+  .secondary-heading {
+    grid-area: s-heading;
+  }
+  .web-traffic-div {
+    grid-area: web-traffic;
+  }
+  .daily-traffic-div {
+    grid-area: daily-traffic;
+  }
+  .mobile-user-div {
+    grid-area: mobile-user;
+  }
+  .social-stats {
+    grid-area: social-stats;
+  }
+  .new-members {
+    grid-area: new-members;
+  }
+  .recent-activities {
+    grid-area: recent;
+  }
+  .message-user {
+    grid-area: message-user;
+  }
+  .settings {
+    grid-area: settings;
+  }
+  .new-members,
+  .recent-activities {
+    padding-left: 1em;
+    padding-right: 1em;
+  }
+  .member {
+    display: flex;
+    justify-content: space-between;
+  }
+  .member div,
+  .member time {
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+  .member div {
+    text-align: left; 
+  }
+  .new-members .member div {
+    flex-basis: 70%;
+  }
+  .recent-activities .member div {
+    flex-basis: 80%;
+  }
+}
  @media (min-width: 1024px) {
- 
+  .page-grid {
+    grid-template-rows: 70px auto;
+    grid-template-columns: 70px auto;
+  }
+  header {
+    grid-column-start: 1;
+    grid-column-end: -1;
+  }
+  nav {
+    grid-row-start: 2;
+    grid-row-end: -1;
+    flex-direction: column;
+  }
+  .nav-icons {
+    flex-direction: column;
+    justify-content: space-between;
+    height: 10%;
+  }
+  .content-grid {
+    grid-template-areas: 
+      "s-heading s-heading"
+      "web-traffic web-traffic"
+      "daily-traffic mobile-user"
+      "social-stats social-stats"
+      "new-members recent"
+      "message-user settings";
+  }
+  .new-members,
+  .recent-activities,
+  .message-user form {
+    justify-content: space-between;
+  }
+  .web-traffic-div,
+  .new-members,
+  .recent-activities {
+    border-top: none;
+  }
+  .message-user form {
+    height: 100%;
+  }
+  .social-stats {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    border-bottom: 1px solid #595959;
+  }
+  .social-stats h3 {
+    flex-basis: 100%;
+    text-align: left;
+    padding-left: 1em;
+    margin-bottom: 0;
+  }
+  .stats-box {
+    flex-grow: 1;
+  }
+  .daily-traffic-div,
+  .new-members,
+  .message-user {
+    border-right: 1px solid #595959;
+  }
+  .recent-activities .member p:nth-child(1) {
+    margin-bottom: 0;
+  }
+  .recent-activities .member p:nth-child(2) {
+    margin-top: 0;
+  }
  }
